--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,11 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
 
-    <string name="home_second">Home Second</string>
+    <string name="home_second">Movies</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_movie">Movie</string>
+    <string name="movie_poster">Movie poster</string>
+    <string name="previous_page">previous page</string>
+    <string name="next_page">next page</string>
+    <string name="_1">1</string>
 </resources>
