--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,11 @@
     <string name="_1" translatable="false">1</string>
     <string name="title_discover">Discover</string>
     <string name="title_favorites">Favorites</string>
+    <string name="icon_discover">Discover icon</string>
+    <string name="genre_help">Genre</string>
+    <string name="hint_discover">" Welcome in discover mode.\nYou can either find movies by genres, or acted by someone, or from a particular year, or all of these 3 filters.\nHave fun discovering ! "</string>
+    <string name="actor_help">Actor</string>
+    <string name="year_help">Year</string>
+    <string name="button_discover">Start discovering !</string>
+    <string name="title_discover_second">Discover movies</string>
 </resources>
