Adding some details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,5 @@
     <string name="year_help">Type a year</string>
     <string name="button_discover">Start discovering !</string>
     <string name="title_discover_second">Discover movies</string>
-    <string name="actor_help">"Find "</string>
+    <string name="actor_help">"Find an actor"</string>
 </resources>
